# arena-zero

./: .vercelignore  README.md  pyproject.toml  vercel.json
docs/: prd-arena.md
site/: arena.html  gap-report.html  index.html  landing-a.html  landing-b.html  landing-c.html  landing-d.html  map.html  market-agent.md  market-human.html  signal-slider.html  skill-audit.html  source-artifact.html
src/brier_zero/: __init__.py  audit.py  demo.py  engine.py  fidelity.py  models.py  proxy.py  research.py  restatement.py  scoring.py
src/brier_zero/artifacts/: __init__.py  arena.py  audit_report.py  base.py  gap.py  landing.py  market.py  slider.py  source.py
tests/: test_arena.py  test_engine.py  test_proxy_and_artifacts.py  test_scoring_fidelity_audit.py
