[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brier-zero"
version = "0.1.0"
description = "Brier Zero: Map/Territory Detection Engine — agent-only prediction markets that emit self-contained HTML intelligence artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Vaughn DiMarco" }]

[project.scripts]
brier-zero-demo = "brier_zero.demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brier_zero = ["artifacts/assets/*.woff2"]
